# Vyaguta-Leave-Viz

./: .env.example  .gitignore  .pylintrc  .sqlfluff  Dockerfile  LICENSE.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  test.sh
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/workflow/: sql_lint.yml  synchronize_and_rollback.yml
.github/workflows/: label.yml  python_lint.yml  sql_lint.yml  synchronize_and_rollback.yml
backend/: README.md  main.py  vyaguta_info_example.json
backend/api/allocations/: controller.py  routes.py  services.py
backend/api/departments/: controller.py  routes.py  services.py
backend/api/designations/: controller.py  routes.py  services.py
backend/utils/: constants.py  sql.py  util.py
db/: README.md  connection-resolver.js  package.json  procedures.json  setupdb.py  sync-db.yml
db/utils/: database.py
infra/: README.md  main.tf  settings.tf  terraform.tfvars.example  variables.tf
insights/: README.md  app.py  dashboard.py
insights/page/: 1_home.py  2_overview.py  3_employee.py  4_leave_trend.py  5_about.py  employee.py  home.py  leave_information.py
insights/sql/: allocation_details.sql  employee_all_leave_data.sql  employee_details.sql  leave_balance.sql
insights/utils/: api.py  constants.py  designs.py  filters.py  sql.py  util.py
src/backend/: Dockerfile  README.md  main.py  vyaguta_info_example.json
src/db/: README.md  setupdb.py
src/infra/: README.md  providers.tf  settings.tf  variables.tf
src/insights/: Dockerfile  README.md  dashboard.py
tests/functional/: test_apis.py
(+99 files in other folders)
