[tool.poetry]
name = "vyagutaviz"
version = "1.0.0"
description = "Vyaguta Leave Visualization system."
authors = ["Saphall <saphalshakha@lftechnology.com>"]

readme = ["README.md", "LICENSE.md"]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
requests = "^2.32.2"
streamlit = "^1.35.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
slowapi = "^0.1.9"
apscheduler = "^3.10.4"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
streamlit-aggrid = "^1.0.5"
streamlit-lottie = "^0.0.5"
genderize = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
coverage = "^7.5.3"
pylint = "^3.2.2"
sqlfluff = "^3.0.7"

[[tool.poetry.packages]]
include = "backend"

[[tool.poetry.packages]]
include = "db"

[[tool.poetry.packages]]
include = "insights"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
